[package]
authors = ["Ockam Developers"]
edition = "2018"
name = "ockam-kex"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[profile.release]
lto = true

[features]
default = []
ffi = ["ffi-support", "lazy_static"]

[dependencies]
arrayref = "0.3"
failure = "0.1"
zeroize = { version = "1.1", features = ["zeroize_derive"] }
ffi-support = { version = "0.4.0", optional = true }
hex = "0.4"
lazy_static = { version = "1.4", optional = true }
ockam-common = { version = "0.1", path = "../common" }
ockam-vault = { version = "0.1", path = "../vault/traits" }
subtle = "2.3"

[dev-dependencies]
ockam-vault-software = { version = "0.1", path = "../vault/software" }
hex = "0.4"
