[package]
name = "ockam-message"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]


[profile.release]
lto = true

[features]
default = []
ffi = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

