[package]
name = "ockam-message"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"

[lib]
crate-type = ["rlib"]
path = "src/message.rs"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
