[package]
name = "ockam-message-router"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ockam-no-std-traits = { version = "0.1", path = "../no_std_traits" }
ockam = { version = "0.1", path = "../ockam" }
ockam-queue = { version = "0.1.0", path = "../queue" }
libc = "0.2.80"
libc-print = "0.1.14"
