[package]
name = "ockam-node"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"

[[bin]]
name = "node"
path = "src/node.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ockam-router = { version = "0.1", path = "../router" }
ockam-transport = { version = "0.1", path = "../transport"}
ockam-message = { version = "0.1", path = "../message"}
ockam-common = { version = "0.1", path = "../common"}
ockam-channel = { version = "0.1", path = "../channel"}
ockam-kex = { version = "0.1", path = "../kex" }
ockam-vault = { version = "0.1", path = "../vault" }
hex = "0.4.2"
structopt = { version = "0.3.17", default-features = false }
