[package]
name = "ockam-node"
version = "0.1.0"
authors = ["Robin Budd <robin@ockam.io>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true

[dependencies]
ockam = { "version" = "0.1", path = "../ockam" }
ockam-router = { version = "0.1", path = "../router" }
ockam-tcp-manager = { version = "0.1", path = "../tcp_manager"}
ockam-common = { version = "0.1", path = "../common"}
ockam-kex-xx = { version = "0.1", path = "../kex/xx" }
ockam-vault-software = { version = "0.1", path = "../vault/software" }
ockam-no-std-traits = { version = "0.1", path = "../no_std_traits" }
ockam-queue = { version = "0.1", path = "../queue" }
ockam-message-router = { version = "0.1", path = "../message_router" }
ockam-worker-manager = { version = "0.1", path = "../worker_manager" }

hex = "0.4.2"
structopt = { version = "0.3.20", default-features = false }
rand = "0.7"
