[package]
name = "ockam"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[features]
async = ["ockam_macros/async"]
executor_async = ["ockam_macros/executor_async"]

[dependencies]
ockam_macros = {path = "../ockam_macros", version = "*"}
hashbrown = "0.9.1"
