[package]
name = "ockam"
version = "0.0.0"
authors = ["Ockam Developers"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["rlib"]

[features]
default = ["ockam_node_std"]

[dependencies]
ockam_node_attribute = {path = "../ockam_node_attribute", version = "*"}
ockam_node_no_std = {path = "../ockam_node_no_std", version = "*", optional = true}
ockam_node_std = {path = "../ockam_node_std", version = "*", optional = true}
hashbrown = "0.9.1"

[dev-dependencies]
trybuild = {version = "1.0.38", features = ["diff"]}
