[workspace]
default-members = [
    "ockam_core",
    "ockam_vault_core",
    "ockam_vault",
    "ockam_vault_sync_core",
    "ockam_channel",
    "ockam_ffi",
    "ockam_key_exchange_core",
    "ockam_key_exchange_xx",
    "ockam_node_attribute",
    "ockam_transport_tcp",
    "ockam_vault_test_attribute",
    "signature_core",
    "signature_bls",
    "signature_bbs_plus",
    "ockam",
    "ockam_key_exchange_x3dh",
    "ockam_node",
    "ockam_node_no_std",
    "ockam_vault_test_suite",
    "ockam_examples"
]
members = [
    "ockam_core",
    "ockam_vault_core",
    "ockam_vault",
    "ockam_vault_sync_core",
    "ockam_channel",
    "ockam_ffi",
    "ockam_key_exchange_core",
    "ockam_key_exchange_xx",
    "ockam_node_attribute",
    "ockam_transport_tcp",
    "ockam_vault_test_attribute",
    "signature_core",
    "signature_bls",
    "signature_bbs_plus",
    "ockam",
    "ockam_key_exchange_x3dh",
    "ockam_node",
    "ockam_node_no_std",
    "ockam_vault_test_suite",
    "ockam_examples"
]