[package]
name = "ockam-queue"
version = "0.1.0"
authors = ["Robin Budd <robin@ockam.io>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ockam-no-std-traits = { version = "0.1", path = "../no_std_traits" }
ockam-message = { version = "0.1", path = "../message" }
